vendor/cargo/impl-trait-for-tuples-0.2.2/tests/fail/tuple_impls_less_than_minimum_does_not_exists.stderr
error[E0277]: the trait bound `(Impl, Impl): Test` is not satisfied
  --> tests/fail/tuple_impls_less_than_minimum_does_not_exists.rs:10:12
   |
10 |     test::<(Impl, Impl)>();
   |            ^^^^^^^^^^^^ the trait `Test` is not implemented for `(Impl, Impl)`
   |
note: required by a bound in `test`
  --> tests/fail/tuple_impls_less_than_minimum_does_not_exists.rs:8:12
   |
8  | fn test<T: Test>() {}
   |            ^^^^ required by this bound in `test`
